--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
     "react-toastify": "^9.1.1",
+    "recoil": "^0.7.7",
     "typescript": "^4.6.4",
     "yup": "^0.32.11"
   },
