--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-select": "^5.3.2",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.7",
+    "recoil-persist": "^4.2.0",
     "typescript": "^4.6.4",
     "yup": "^0.32.11"
   },
