--- a/package.json
+++ b/package.json
@@ -7,8 +7,10 @@
     "@heroicons/react": "^1.0.6",
     "@hookform/resolvers": "^2.8.8",
     "axios": "^1.2.1",
+    "bootstrap": "^5.2.3",
     "emotion": "^11.0.0",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.7.3",
     "react-dom": "^18.1.0",
     "react-hook-form": "^7.40.0",
     "react-query": "^3.39.2",
