--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.3.2",
+    "react-switch": "^7.0.0",
     "react-toastify": "^9.1.1",
     "recoil": "^0.7.7",
     "recoil-persist": "^4.2.0",
